@@ -58,6 +58,9 @@ CheckDisk = enabled
 ; CheckWMI - Controls wether check_wmi is allowed or not.
 CheckWMI = disabled
 
+; CheckLogFile - Controls wether check_logfile is allowed or not.
+CheckLogFile = disabled
+
 
 [/settings/default]
 ; allowed hosts - List of ips/networks/hostname allowed to connect.
