@@ -7,6 +7,7 @@ next:
          - check_logfile: improve detection of required macros
          - add list-combine option
          - add challenge password support for csr
+         - add CheckLogFile option to /modules configuration
 
 0.37     Sun Sep  7 11:41:00 CEST 2025
          - update windows exporter to 0.31.3
